src/test/ui/consts/const_in_pattern/reject_non_partial_eq.stderr
error: `std::option::Option<NoPartialEq>` must implement `PartialEq` to be used in a pattern
  --> $DIR/reject_non_partial_eq.rs:28:9
   |
LL |         NO_PARTIAL_EQ_NONE => println!("NO_PARTIAL_EQ_NONE"),
   |         ^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

